-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8
-
4960d7224 (dev), ee60bb0ce (6.8)
-
DaVinci 102
Quotes are too much escaped in code blocks. For instance, json.xml:
{{{
<db:para>A simple JSON document encoding a person, his/her age, address and phone numbers could look like:</db:para>
<db:programlisting language="cpp">{
"FirstName": "John",
"LastName": "Doe",
"Age": 43,
"Address":
,
"Phone numbers": [
"+44 1234567",
"+44 2345678"
]
}}}
Or in 04-qdoc-commands-textmarkup.xml:
{{{
<db:para>For example, we might want to render an inline image so that it floats to the right of the current block of text:</db:para> <db:programlisting language="cpp" role="bad">/*! \div
\inlineimage qml-column.png
\enddiv
*/
</db:programlisting>
}}}
For Gerrit Dashboard: QTBUG-126994 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
584927,2 | QDoc: Don't escape characters multiple times in DocBook output | dev | qt/qttools | Status: MERGED | +2 | 0 |
585005,2 | QDoc: Don't escape characters multiple times in DocBook output | 6.8 | qt/qttools | Status: MERGED | +2 | 0 |