QDoc: Don't escape characters multiple times in DocBook output

In its internal representation of a documentation set, QDoc may apply
"code markers" to certain strings. These markers serve as tokens that
allow QDoc to distinguish code from plain text.

When generating DocBook output, QDoc removes code markers from certain
`Atom`s before passing them to the XML writer for output. However,
certain escape characters end up being passed to the writer, which in
turn escapes them again. The result is output such as:

    <db:programlisting language="cpp">{
    &amp;quot;FirstName&amp;quot;: &amp;quot;John&amp;quot;,
    &amp;quot;LastName&amp;quot;: &amp;quot;Doe&amp;quot;,
    &amp;quot;Age&amp;quot;: 43,
    &amp;quot;Address&amp;quot;: {
    &amp;quot;Street&amp;quot;: &amp;quot;Downing Street 10&amp;quot;,
    &amp;quot;City&amp;quot;: &amp;quot;London&amp;quot;,
    &amp;quot;Country&amp;quot;: &amp;quot;Great Britain&amp;quot;
	},
    &amp;quot;Phone numbers&amp;quot;: [
    &amp;quot;+44 1234567&amp;quot;,
    &amp;quot;+44 2345678&amp;quot;
	]
    }
    </db:programlisting>

QDoc's `Generator` class contains the method `plainCode`, which
replaces certain HTML escape entity names with their corresponding
character. Pass the string through this method to strip the escape
character entities from the string before passing the string to the
XML writer. Update the output in the two end-to-end output tests that
are affected by this change in behavior.

Fixes: QTBUG-126994
Change-Id: Iccdb86abd9061f257dc248f1d6313a839784450e
Reviewed-by: Thibaut Cuvelier <cuvelier.thibaut@gmail.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit 4960d72240f06abd4ce0af5149142ea10659aa47)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>